Add follow user api routes
