# apps/api/src/routes/user.routes.ts
@@ -13,7 +13,12 @@ const getUserHandler: RequestHandler = async (req, res) => {
   await userController.getUser(req, res);
 };
 
+const followHandler: RequestHandler = async (req, res) => {
+  await userController.follow(req, res);
+};
+
 router.post('/register', registerHandler);
 router.get('/:address', getUserHandler);
+router.post('/follow', followHandler);
 
 export default router;
